--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             line-height: 1.6; 
         }
 
-        /* --- ЛОГИКА КУРСОРА --- */
+        /* --- ЛОГИКА КУРСОРА (только на ПК; на планшете и телефоне скрыт) --- */
         .cursor-dot { width: 4px; height: 4px; background: white; border-radius: 50%; position: fixed; left: 0; top: 0; pointer-events: none; z-index: 10000; mix-blend-mode: difference; }
         .cursor-circle { width: 30px; height: 30px; border: 1px solid white; border-radius: 50%; position: fixed; left: 0; top: 0; pointer-events: none; z-index: 9999; transition: transform 0.3s ease, width 0.3s; mix-blend-mode: difference; }
         .is-hovering { transform: scale(1.3); border-width: 1px; background: transparent; }
+        body.no-custom-cursor .cursor-dot,
+        body.no-custom-cursor .cursor-circle { display: none !important; }
 
         body.modal-open { cursor: auto !important; overflow: hidden; } 
         body.modal-open * { cursor: auto !important; }
@@ -342,7 +344,7 @@
 
     <section class="hero">
         <div class="hero-bg-wrap">
-            <img src="hero-bg.jpg" class="hero-img">
+            <img src="hero-bg.webp" class="hero-img">
             <div class="hero-bottom-fade"></div>
         </div>
         <div class="hero-content">
@@ -379,27 +381,27 @@
         
         <div class="sys-grid">
             <div class="sys-card" data-hover onclick="handleCardClick('Trasparenza')">
-                <div class="sys-img-box"><img src="anime.jpg"></div>
+                <div class="sys-img-box"><img src="anime.webp"></div>
                 <div class="sys-info"><h3 class="sys-name">Trasparenza</h3><span class="sys-meta">Сбалансированная система из массива и стекла.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Mezzanotte')">
-                <div class="sys-img-box"><img src="Improve_the_quality_2k_202601261824.jpeg"></div>
+                <div class="sys-img-box"><img src="Improve_the_quality_2k_202601261824.webp"></div>
                 <div class="sys-info"><h3 class="sys-name">Mezzanotte</h3><span class="sys-meta">Премиальный темный орех с интегрированной LED-подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Luce')">
-                <div class="sys-img-box"><img src="prostor.png"></div>
+                <div class="sys-img-box"><img src="prostor.webp"></div>
                 <div class="sys-info"><h3 class="sys-name">Luce</h3><span class="sys-meta">Лаконичная открытая система для просторных помещений.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Collezione')">
-                <div class="sys-img-box"><img src="Make_the_sneakers_2k_202601261709.jpeg"></div>
+                <div class="sys-img-box"><img src="Make_the_sneakers_2k_202601261709.webp"></div>
                 <div class="sys-info"><h3 class="sys-name">Collezione</h3><span class="sys-meta">Специализированная витрина для коллекции обуви с подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Armonia')">
-                <div class="sys-img-box"><img src="stol.png"></div>
+                <div class="sys-img-box"><img src="stol.webp"></div>
                 <div class="sys-info"><h3 class="sys-name">Armonia</h3><span class="sys-meta">Функциональная интеграция рабочей зоны в систему хранения.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Riserva')">
-                <div class="sys-img-box"><img src="vino.png"></div>
+                <div class="sys-img-box"><img src="vino.webp"></div>
                 <div class="sys-info"><h3 class="sys-name">Riserva</h3><span class="sys-meta">Профессиональная винная библиотека для ценителей.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
         </div>
@@ -474,7 +476,7 @@
             <a href="#" class="b-btn" id="openRequestBtn" data-hover onclick="var m=document.getElementById('contactModal');if(m){m.classList.add('active');document.body.classList.add('modal-open');}var i=document.getElementById('interestedProduct');if(i)i.value='';return false;">Оставить заявку</a>
         </div>
         <div style="order: 1; overflow: hidden; position: relative; height: 100%; min-height: 600px;">
-            <img src="Improve_the_quality_2k_202601261804.jpeg" class="bespoke-img">
+            <img src="Improve_the_quality_2k_202601261804.webp" class="bespoke-img">
         </div>
     </section>
 
@@ -549,9 +551,19 @@
 
     <script>
         (function() {
+            function isDesktop() {
+                var w = window.innerWidth;
+                var ua = navigator.userAgent || '';
+                var mobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(ua);
+                return w > 1024 && !mobile;
+            }
             var dot = document.getElementById('dot');
             var circle = document.getElementById('circle');
             if (!dot || !circle) return;
+            if (!isDesktop()) {
+                document.body.classList.add('no-custom-cursor');
+                return;
+            }
             var mouseX = 0, mouseY = 0, circleX = 0, circleY = 0;
             document.addEventListener('mousemove', function(e) {
                 mouseX = e.clientX;
