--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="sys-img-box">
                     <picture>
                         <source type="image/webp" srcset="anime.webp">
-                        <img src="anime.jpg" alt="Trasparenza — система из массива и стекла" loading="lazy" decoding="async">
+                        <img src="anime.jpg" alt="Trasparenza — система из массива и стекла" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Trasparenza</h3><span class="sys-meta">Сбалансированная система из массива и стекла.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -351,7 +351,7 @@
                 <div class="sys-img-box">
                     <picture>
                         <source type="image/webp" srcset="Improve_the_quality_2k_202601261824.webp">
-                        <img src="Improve_the_quality_2k_202601261824.jpg" alt="Mezzanotte — темный орех с LED-подсветкой" loading="lazy" decoding="async">
+                        <img src="Improve_the_quality_2k_202601261824.jpg" alt="Mezzanotte — темный орех с LED-подсветкой" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Mezzanotte</h3><span class="sys-meta">Премиальный темный орех с интегрированной LED-подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -360,7 +360,7 @@
                 <div class="sys-img-box">
                     <picture>
                         <source type="image/webp" srcset="prostor.webp">
-                        <img src="prostor.jpg" alt="Luce — открытая система для просторных помещений" loading="lazy" decoding="async">
+                        <img src="prostor.jpg" alt="Luce — открытая система для просторных помещений"  decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Luce</h3><span class="sys-meta">Лаконичная открытая система для просторных помещений.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -369,7 +369,7 @@
                 <div class="sys-img-box">
                     <picture>
                         <source type="image/webp" srcset="Make_the_sneakers_2k_202601261709.webp">
-                        <img src="Make_the_sneakers_2k_202601261709.jpg" alt="Collezione — витрина для коллекции обуви" loading="lazy" decoding="async">
+                        <img src="Make_the_sneakers_2k_202601261709.jpg" alt="Collezione — витрина для коллекции обуви"  decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Collezione</h3><span class="sys-meta">Специализированная витрина для коллекции обуви с подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -378,7 +378,7 @@
                 <div class="sys-img-box">
                     <picture>
                         <source type="image/webp" srcset="stol.webp">
-                        <img src="stol.jpg" alt="Armonia — рабочая зона в системе хранения" loading="lazy" decoding="async">
+                        <img src="stol.jpg" alt="Armonia — рабочая зона в системе хранения" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Armonia</h3><span class="sys-meta">Функциональная интеграция рабочей зоны в систему хранения.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -387,7 +387,7 @@
                 <div class="sys-img-box">
                     <picture>
                         <source type="image/webp" srcset="vino.webp">
-                        <img src="vino.jpg" alt="Riserva — винная библиотека" loading="lazy" decoding="async">
+                        <img src="vino.jpg" alt="Riserva — винная библиотека" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Riserva</h3><span class="sys-meta">Профессиональная винная библиотека для ценителей.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -445,7 +445,7 @@
         <div class="b-img-wrap" style="order: 1; overflow: hidden; position: relative; height: 100%; min-height: 600px;">
             <picture>
                 <source type="image/webp" srcset="Improve_the_quality_2k_202601261804.webp">
-                <img src="Improve_the_quality_2k_202601261804.jpg" alt="Индивидуальное проектирование ROVERO" class="bespoke-img" loading="lazy" decoding="async">
+                <img src="Improve_the_quality_2k_202601261804.jpg" alt="Индивидуальное проектирование ROVERO" class="bespoke-img" decoding="async">
             </picture>
         </div>
     </section>
