--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Интеллектуальные гардеробные системы из массива. Сделано в России.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.roverodesign.ru/">
-    <meta property="og:image" content="hero-bg.webp">
+    <meta property="og:image" content="herobg.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -300,8 +300,8 @@
     <section class="hero">
         <div class="hero-bg-wrap">
             <picture>
-                <source type="image/webp" srcset="hero-bg.webp">
-                <img src="hero-bg.jpg" alt="ROVERO CASA — модульные системы из массива" class="hero-img" decoding="async">
+                <source type="image/jpg" srcset="herobg.jpg">
+                <img src="herobg.jpg" alt="ROVERO CASA — модульные системы из массива" class="hero-img" decoding="async">
             </picture>
             <div class="hero-bottom-fade"></div>
         </div>
@@ -341,8 +341,8 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Trasparenza')">
                 <div class="sys-img-box">
                     <picture>
-                        <source type="image/webp" srcset="anime.webp">
-                        <img src=" anime.jpg" alt="Trasparenza — система из массива и стекла" decoding="async">
+                        <source type="image/jpg" srcset="trasparenza.jpg">
+                        <img src=" trasparenza.jpg" alt="Trasparenza — система из массива и стекла" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Trasparenza</h3><span class="sys-meta">Сбалансированная система из массива и стекла.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -350,8 +350,8 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Mezzanotte')">
                 <div class="sys-img-box">
                     <picture>
-                        <source type="image/webp" srcset="Improve_the_quality_2k_202601261824.webp">
-                        <img src="Improve_the_quality_2k_202601261824.jpg" alt="Mezzanotte — темный орех с LED-подсветкой" decoding="async">
+                        <source type="image/jpg" srcset="mezzanotte.jpg">
+                        <img src="mezzanotte.jpg" alt="Mezzanotte — темный орех с LED-подсветкой" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Mezzanotte</h3><span class="sys-meta">Премиальный темный орех с интегрированной LED-подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -359,8 +359,8 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Luce')">
                 <div class="sys-img-box">
                     <picture>
-                        <source type="image/webp" srcset="prostor.webp">
-                        <img src="prostor.jpg" alt="Luce — открытая система для просторных помещений"  decoding="async">
+                        <source type="image/jpg" srcset="luce.jpg">
+                        <img src="luce.jpg" alt="Luce — открытая система для просторных помещений"  decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Luce</h3><span class="sys-meta">Лаконичная открытая система для просторных помещений.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -368,8 +368,8 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Collezione')">
                 <div class="sys-img-box">
                     <picture>
-                        <source type="image/webp" srcset="Make_the_sneakers_2k_202601261709.webp">
-                        <img src="Make_the_sneakers_2k_202601261709.jpg" alt="Collezione — витрина для коллекции обуви"  decoding="async">
+                        <source type="image/jpg" srcset="collezione.jpg">
+                        <img src="collezione.jpg" alt="Collezione — витрина для коллекции обуви"  decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Collezione</h3><span class="sys-meta">Специализированная витрина для коллекции обуви с подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -377,8 +377,8 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Armonia')">
                 <div class="sys-img-box">
                     <picture>
-                        <source type="image/webp" srcset="stol.webp">
-                        <img src="stol.jpg" alt="Armonia — рабочая зона в системе хранения" decoding="async">
+                        <source type="image/jpg" srcset="armonia.jpg">
+                        <img src="armonia.jpg" alt="Armonia — рабочая зона в системе хранения" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Armonia</h3><span class="sys-meta">Функциональная интеграция рабочей зоны в систему хранения.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -386,8 +386,8 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Riserva')">
                 <div class="sys-img-box">
                     <picture>
-                        <source type="image/webp" srcset="vino.webp">
-                        <img src="vino.jpg" alt="Riserva — винная библиотека" decoding="async">
+                        <source type="image/jpg" srcset="riserva.jpg">
+                        <img src="riserva.jpg" alt="Riserva — винная библиотека" decoding="async">
                     </picture>
                 </div>
                 <div class="sys-info"><h3 class="sys-name">Riserva</h3><span class="sys-meta">Профессиональная винная библиотека для ценителей.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
@@ -444,8 +444,8 @@
         </div>
         <div class="b-img-wrap" style="order: 1; overflow: hidden; position: relative; height: 100%; min-height: 600px;">
             <picture>
-                <source type="image/webp" srcset="Improve_the_quality_2k_202601261804.webp">
-                <img src="Improve_the_quality_2k_202601261804.jpg" alt="Индивидуальное проектирование ROVERO" class="bespoke-img" decoding="async">
+                <source type="image/jpg" srcset="zaiava.jpg">
+                <img src="zaiava.jpg" alt="Индивидуальное проектирование ROVERO" class="bespoke-img" decoding="async">
             </picture>
         </div>
     </section>
