--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="f-center">
             <a href="#" class="footer-up-link" data-hover onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;">
                 <div class="f-logo">ROVERO</div>
-                <span class="f-ussr">Сделано в России</span>
+                <span class="f-ussr">Сделано в СССР</span>
             </a>
         </div>
         <div class="f-right">
