--- a/index.html
+++ b/index.html
@@ -334,33 +334,33 @@
 
     <section class="catalog-section" id="catalog">
         <div class="sec-header">
-            <h2 class="sec-title">Конструктор Пространства</h2>
+            <h2 class="sec-title">Коллекции модулей</h2>
         </div>
         
         <div class="sys-grid">
-            <div class="sys-card" data-hover onclick="handleCardClick('Trasparenza')">
-                <div class="sys-img-box"><img src="trasparenza.webp" loading="lazy" decoding="async"></div>
-                <div class="sys-info"><h3 class="sys-name">Trasparenza</h3><span class="sys-meta">Сбалансированная система из массива и стекла.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
-            </div>
-            <div class="sys-card" data-hover onclick="handleCardClick('Mezzanotte')">
-                <div class="sys-img-box"><img src="mezzanotte.webp" loading="lazy" decoding="async"></div>
-                <div class="sys-info"><h3 class="sys-name">Mezzanotte</h3><span class="sys-meta">Премиальный гардероб с интегрированной LED-подсветкой.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
+            <div class="sys-card" data-hover onclick="handleCardClick('Diamante')">
+                <div class="sys-img-box"><img src="diamante.webp" loading="lazy" decoding="async"></div>
+                <div class="sys-info"><h3 class="sys-name">Diamante</h3><span class="sys-meta">Строгий дизайн профилей. Внешне напоминает драгоценный камень.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Luce')">
                 <div class="sys-img-box"><img src="luce.webp" loading="lazy" decoding="async"></div>
-                <div class="sys-info"><h3 class="sys-name">Luce</h3><span class="sys-meta">Лаконичная открытая система для просторных помещений.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
+                <div class="sys-info"><h3 class="sys-name">Luce</h3><span class="sys-meta">Рациональный дизайн. Интеллектуальный подход к хранению.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
-            <div class="sys-card" data-hover onclick="handleCardClick('Collezione')">
-                <div class="sys-img-box"><img src="collezione.webp" loading="lazy" decoding="async"></div>
-                <div class="sys-info"><h3 class="sys-name">Collezione</h3><span class="sys-meta">Удобная угловая система для обустройства гостиной.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
+            <div class="sys-card" data-hover onclick="handleCardClick('Cerchio')">
+                <div class="sys-img-box"><img src="cerchio.webp" loading="lazy" decoding="async"></div>
+                <div class="sys-info"><h3 class="sys-name">Cerchio</h3><span class="sys-meta">Закругленный профиль. Располагает к себе, сглаживает помещение.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
+            </div>
+            <div class="sys-card" data-hover onclick="handleCardClick('Intimita')">
+                <div class="sys-img-box"><img src="intimita.webp" loading="lazy" decoding="async"></div>
+                <div class="sys-info"><h3 class="sys-name">Intimita</h3><span class="sys-meta">Компактная модульная конструкция для украшения любого интерьера.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Armonia')">
                 <div class="sys-img-box"><img src="armonia.webp" loading="lazy" decoding="async"></div>
-                <div class="sys-info"><h3 class="sys-name">Armonia</h3><span class="sys-meta">Уютная интеграция системы хранения в обеденную зону.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
+                <div class="sys-info"><h3 class="sys-name">Armonia</h3><span class="sys-meta">Сбалансированная система модулей. Отлично дополняет пространство.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
-            <div class="sys-card" data-hover onclick="handleCardClick('Riserva')">
-                <div class="sys-img-box"><img src="riserva.webp" loading="lazy" decoding="async"></div>
-                <div class="sys-info"><h3 class="sys-name">Riserva</h3><span class="sys-meta">Профессиональная винная библиотека для ценителей.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
+            <div class="sys-card" data-hover onclick="handleCardClick('Sommelier')">
+                <div class="sys-img-box"><img src="sommelier.webp" loading="lazy" decoding="async"></div>
+                <div class="sys-info"><h3 class="sys-name">Sommelier</h3><span class="sys-meta">Модульная система хранения вина. Превращает коллекцию в окружение.</span><div class="sys-price">от 65 000 ₽ / м²</div></div>
             </div>
         </div>
     </section>
