--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <div class="sys-info"><h3 class="sys-name">Armonia</h3></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Sommelier')">
-                <div class="sys-img-box"><img src="sommelierW.webp" loading="lazy" decoding="async"></div>
+                <div class="sys-img-box"><img src="sommelier3.webp" loading="lazy" decoding="async"></div>
                 <div class="sys-info"><h3 class="sys-name">Sommelier</h3></div>
             </div>
             <div class="sys-card" data-hover onclick="handleCardClick('Cucina')">
@@ -410,6 +410,10 @@
             <div class="sys-card" data-hover onclick="handleCardClick('Arma')">
                 <div class="sys-img-box"><img src="arma5.webp" loading="lazy" decoding="async"></div>
                 <div class="sys-info"><h3 class="sys-name">Arma</h3></div>
+            </div>
+            <div class="sys-card" data-hover onclick="handleCardClick('Scelta')">
+                <div class="sys-img-box"><img src="scelta4.webp" loading="lazy" decoding="async"></div>
+                <div class="sys-info"><h3 class="sys-name">Scelta</h3></div>
             </div>
         </div>
     </section>
