--- a/product.html
+++ b/product.html
@@ -421,13 +421,13 @@
                 price: 'от 65 000 ₽ / м²',
                 desc: 'Эта модульная система хранения вина превращает частную коллекцию в ключевой элемент архитектурного окружения. Мы разработали конструкцию, которая стирает границу между мебелью и экспозицией, позволяя благородным напиткам задавать атмосферу всего помещения. Гибкость модулей дает возможность интегрировать винные шкафы в любое пространство, создавая эффект профессиональной винотеки прямо у вас дома. Это идеальный выбор для истинных ценителей, желающих окружить себя эстетикой высокой винной культуры.',
                 defaultColor: 'Херос',
-                image: 'sommelier4.webp',
+                image: 'sommelier3.webp',
                 colors: {
                     'Натуральный': ['sommelier1.webp'],
-                    'Венге': ['sommelier5.webp'],
-                    'Херос': ['sommelier4.webp'],
-                    'Дымчато-серый': ['sommelier3.webp'],
-                    'Белый лессирующий': ['sommelier2.webp']
+                    'Венге': ['sommelier2.webp'],
+                    'Херос': ['sommelier3.webp'],
+                    'Дымчато-серый': ['sommelier4.webp'],
+                    'Белый лессирующий': ['sommelier5.webp']
                 }
             },
             'Cucina': {
@@ -458,18 +458,18 @@
                     'Белый лессирующий': ['arma1.webp']
                 }
             },
-            'NewModel3': {
-                title: 'Новая Модель 3',
+            'Scelta': {
+                title: 'Scelta',
                 price: 'от 65 000 ₽ / м²',
-                desc: 'Описание новой модели. Замените этот текст и настройте цвета и изображения.',
-                defaultColor: 'Натуральный',
-                image: 'diamante.webp',
+                desc: 'Эта коллекция торговых модулей меняет архитектуру винного ритейла, превращая навигацию по залу в эстетический маршрут. Круговая геометрия и вертикальная ритмика света обеспечивают презентацию уровня art-объекта, притягивая взгляд покупателя к каждой этикетке. Мы объединили коммерческую функциональность с благородством натурального массива, сделав эту систему эталонным выбором как для статусных бутиков, так и для масштабных частных винотек. Это тот случай, когда профессиональное оборудование становится главным украшением интерьера.',
+                defaultColor: 'Дымчато-серый',
+                image: 'scelta4.webp',
                 colors: {
-                    'Натуральный': ['diamante.webp'],
-                    'Венге': ['diamante.webp'],
-                    'Херос': ['diamante.webp'],
-                    'Дымчато-серый': ['diamante.webp'],
-                    'Белый лессирующий': ['diamante.webp']
+                    'Натуральный': ['scelta1.webp'],
+                    'Венге': ['scelta2.webp'],
+                    'Херос': ['scelta3.webp'],
+                    'Дымчато-серый': ['scelta4.webp'],
+                    'Белый лессирующий': ['scelta5.webp']
                 }
             }
         };
